Fix broken UI for record button and dropdown.

--- a/client/src/components/views/Chatroom/Chatroom.css
+++ b/client/src/components/views/Chatroom/Chatroom.css
@@ -19,7 +19,7 @@
 }
 
 .primary-buttons {
-    margin-top: 20vh;
+    /* margin-top: 20vh; */
     display: flex;
     justify-content: center;
     align-items: center;
